Create logbook entity + a basic layout for logbook page. Create main js and css.

--- a/app/Resources/views/Main/index.html.twig
+++ b/app/Resources/views/Main/index.html.twig
@@ -1,7 +1,9 @@
-{% extends "::base.html.twig" %}
+{% extends "base.html.twig" %}
 
 {% block title %}BlogBundle:Main:index{% endblock %}
 
 {% block body %}
-<h1>Welcome to the Main:index page</h1>
+<h1>Welcome to the Main:index pagesdved</h1>
+
+    <a href="{{ path('logbook') }}">Ici le logbook</a>
 {% endblock %}
