--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -30,9 +30,9 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <div class="nav navbar-nav navbar-left nav-social nav_networks">
-                    <a href="{{ path('index') }}" target="_blank"><img src="{{ asset('/img/home-black.png') }}" alt="home"></a>
-                    <a href="{{ path('profile') }}" target="_blank"><img src="{{ asset('/img/profile-black.png')}}" alt="profil"></a>
-                    <a href="{{ path('resume') }}" target="_blank"><img src="{{ asset('/img/curriculum-black.png')}}" alt="curriculum"></a>
+                    <a href="{{ path('index') }}"><img src="{{ asset('/img/home-black.png') }}" alt="home"></a>
+                    <a href="{{ path('profile') }}"><img src="{{ asset('/img/profile-black.png')}}" alt="profil"></a>
+                    <a href="{{ path('resume') }}"><img src="{{ asset('/img/curriculum-black.png')}}" alt="curriculum"></a>
                 </div>
                 <div class="nav navbar-nav navbar-right nav-social nav_networks">
                     <a href="https://github.com/{{ github }}" target="_blank"><img src="{{ asset('/img/github-black.png') }}" alt="github"></a>
