--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -1,6 +1,6 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}BlogBundle:Main:resume{% endblock %}
+{% block title %}BlogBundle:Main:settings{% endblock %}
 
 {% block body %}
 <h1>Welcome to the Main:resume page</h1>
