--- a/app/Resources/views/Main/settings.html.twig
+++ b/app/Resources/views/Main/settings.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block title %}BlogBundle:Main:profile{% endblock %}
+{% block title %}BlogBundle:Main:settings{% endblock %}
 
 {% block body %}
 <h1>Welcome to the Main:contact page</h1>
