Resize navbar icon. Tried some styling on logbook page, not very happy about it

--- a/app/Resources/views/Main/index.html.twig
+++ b/app/Resources/views/Main/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block title %}BlogBundle:Main:index{% endblock %}
+{% block title %}Accueil - Home | {{ site_name }} {% endblock %}
 
 {% block body %}
     <div class="col">
