--- a/app/Resources/views/Main/logbook.html.twig
+++ b/app/Resources/views/Main/logbook.html.twig
@@ -1,33 +1,42 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}Logbook - Journal de Dev{% endblock %}
+{% block title %}Journal de Dev - Logbook | {{ site_name }}{% endblock %}
 
 {% block body %}
     <div class="container-fluid">
         <h1>Bienvenue sur le journal de développement de mon site perso</h1>
-        <h2>Ici vous retrouverez des postes court sur les avancées, difficultés et autre rencontrées en développant mon blog perso.</h2>
+        <h2><small>Ici vous retrouverez des postes courts sur les avancées, difficultés, etc rencontrés en développant mon site perso.</small></h2>
 
-        <div class="row" id="logbook_obj">
-            {% for logbook in logbooks %}
-                {% if logbook.title == "Objectifs" %}
-                    <div class="col-xs-offset-2 col-xs-8">
-                        <h3>{{ logbook.title }}</h3>
-                        {%  if logbook.other %}
-                            <p>{{ logbook.other }}</p>
-                        {%  endif %}
-                        {%  if logbook.img %}
-                            <img src="{{ logbook.img }}"/>
-                        {% endif %}
-                        <p>{{ logbook.content }}</p>
-                    </div>
-                {% endif %}
-            {% endfor %}
+        <div class="row logbook" id="logbook_obj">
+            <div class="col-xs-offset-2 col-xs-8">
+                <h3>Objectifs</h3>
+                <h4>A l'heure actuelle, les principaux axes de développement sur lesquels je souhaite travailler pour mon site sont :</h4>
+                <ul>
+                    <li>Développement de toutes les sections du site</li>
+                    <li>Tenue du logbook de développement</li>
+                    <li>Création d'une partie blog avec backoffice permettant la mise en ligne simple de postes.</li>
+                </ul>
+                <br>
+
+                <h4>Et en optionnel :</h4>
+                <ul>
+                    <li>Commencer à créer une chatbot</li>
+                    <li>Intégrer API Github / créer script de récupération pour intégrer automatiquement mes textes de commit dans le logbook lors des commit / push </li>
+                </ul>
+            </div>
         </div>
 
-        <div class="row" id="logbook_articles">
+        <div class="bl_sp_xs"></div>
+
+        <div class="row logbook" id="logbook_articles">
+
+            <div class="col-xs-offset-2 col-xs-8">
+                <h3>Journal</h3>
+            </div>
             {% for logbook in logbooks %}
+            {% if logbook.title != "Objectifs" %}
                 <div class="col-xs-offset-2 col-xs-8">
-                    <h3>{{ logbook.title }}</h3>
+                    <h4>{{ logbook.title }}</h4>
                     {%  if logbook.other %}
                         <p>{{ logbook.other }}</p>
                     {%  endif %}
@@ -35,7 +44,9 @@
                         <img src="{{ logbook.img }}"/>
                     {% endif %}
                     <p>{{ logbook.content }}</p>
+                    <hr>
                 </div>
+            {% endif %}
             {% endfor %}
         </div>
     </div>
