Add logo img. Add filter in template to display raw data witht their html balise

--- a/app/Resources/views/Main/logbook.html.twig
+++ b/app/Resources/views/Main/logbook.html.twig
@@ -43,7 +43,7 @@
                     {%  if logbook.img %}
                         <img src="{{ logbook.img }}"/>
                     {% endif %}
-                    <p>{{ logbook.content }}</p>
+                    <p>{{ logbook.content | raw }}</p>
                     <hr>
                 </div>
             {% endif %}
