--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -30,6 +30,7 @@
             </div>
             <div class="navbar-collapse" id="myNavbar">
                 <div class="nav navbar-nav navbar-left nav-social nav_networks">
+                    <a href=""><img src="" alt=""><img src="{{ asset('/img/logo_perso-white.png') }}" alt="home" ></a>
                     <a href="{{ path('index') }}"><img src="{{ asset('/img/home-black.png') }}" alt="home" ></a>
                     <a class="disable" href="{{ path('profile') }}"><img src="{{ asset('/img/profile-black.png')}}" alt="profil"></a>
                     <a class="disable" href="{{ path('resume') }}"><img src="{{ asset('/img/curriculum-black.png')}}" alt="curriculum"></a>
