Try to switch on materialize instead of bootstrap. Started the necessary changes

--- a/app/Resources/views/Main/logbook.html.twig
+++ b/app/Resources/views/Main/logbook.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Journal de Dev - Logbook | {{ site_name }}{% endblock %}
 
 {% block body %}
-    <div class="container-fluid">
+    <div class="container">
         <h1>Bienvenue sur le journal de développement de mon site perso</h1>
         <h2><small>Ici vous retrouverez des postes courts sur les avancées, difficultés, etc rencontrés en développant mon site perso.</small></h2>
 
