--- a/web/css/main.css
+++ b/web/css/main.css
@@ -86,3 +86,17 @@ img {
     height: 10vh;
 
 }
+
+#logbook_articles {
+    text-align:center;
+}
+
+#navbar {
+    border-bottom: 2px solid #009900;
+    box-shadow: 2px 2px 2px 0px #009900;
+    height: auto;
+    margin-top: 5px;
+}
+
+.home_bloc_btn {
+}
