--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,11 +5,20 @@
         <title>{% block title %}Bienvenue sur {{ site_name }} par Alexandre Fradet !{% endblock %}</title>
 
         <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
         <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">-->
         <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
+
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
@@ -20,37 +29,41 @@
     </head>
     <body>
     <header>
-        <div class="container-fluid nav_container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="navbar-collapse" id="myNavbar">
-                <div class="nav navbar-nav navbar-left nav-social nav_networks">
-                    <a href=""><img src="" alt=""><img src="{{ asset('/img/logo_perso-white.png') }}" alt="home" ></a>
+        <div class="">
+            <div class="row" id="navbar">
+
+                <!--
+                <div class="navbar-header">
+                          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                              <span class="icon-bar"></span>
+                              <span class="icon-bar"></span>
+                              <span class="icon-bar"></span>
+                          </button>
+                </div>
+                -->
+                <div class="col s10 offset-s1 offset-m1 m3 home_bloc_btn">
+                    <a href=""><img src="" alt=""><img src="{{ asset('/img/logo_perso-white.png') }}" alt="" ></a>
                     <a href="{{ path('index') }}"><img src="{{ asset('/img/home-black.png') }}" alt="home" ></a>
                     <a class="disable" href="{{ path('profile') }}"><img src="{{ asset('/img/profile-black.png')}}" alt="profil"></a>
                     <a class="disable" href="{{ path('resume') }}"><img src="{{ asset('/img/curriculum-black.png')}}" alt="curriculum"></a>
                 </div>
-                <div class="nav navbar-nav navcenter nav-social nav_networks">
+                <div class="col s10 offset-s1 offset-m1 m2 home_bloc_btn">
                     <a class="disable" href="{{ path('settings') }}"><img src="{{ asset('/img/settings-black.png')}}" alt="settings"></a>
                     <a href="{{ path('logbook') }}"><img src="{{ asset('/img/logbook-black.png')}}" alt="logbook"></a>
                 </div>
-                <div class="nav navbar-nav navbar-right nav-social nav_networks">
+                <div class="col s10 offset-s1 offset-m1 m3 home_bloc_btn">
                     <a href="https://github.com/{{ github }}" target="_blank"><img src="{{ asset('/img/github-black.png') }}" alt="github"></a>
                     <a  href="https://twitter.com/{{ twitter }}" target="_blank"><img src="{{ asset('/img/twitter-black.png')}}" alt="twitter"></a>
                     <a href="https://fr.linkedin.com/in/{{ linkedin }}" target="_blank"><img src="{{ asset('/img/linkedin-black.png')}}" alt="linkedin"></a>
                 </div>
-
             </div>
         </div>
     </header>
         {% block body %}{% endblock %}
         {% block javascripts %}
             <script src="{{ asset('css/main.js') }}" ></script>
+            <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+            <script type="text/javascript" src="js/materialize.min.js"></script>
         {% endblock %}
     </body>
 </html>
