Finish changing class name to adapt from bootstrap to materialiaz

--- a/app/Resources/views/Main/index.html.twig
+++ b/app/Resources/views/Main/index.html.twig
@@ -6,7 +6,7 @@
     <div class="col">
 
         <h1>Bienvenue sur {{ site_name }}</h1>
-        <div class="col-xs-offset-2 col-xs-8">
+        <div class="col offset-s2 s8">
             <p>Le site est actuellement en construction, les différentes sections ouvreront au fur et à mesure de mon avancement et apprentissage !</p>
             <p>Vous pouvez d'ores et déjà retrouver mes objectifs, difficultés et avancées sur le développement du site <a href="{{ path('logbook') }}">dans mon logbook</a></p>
         </div>
