--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,16 +32,7 @@
         <div class="">
             <div class="row" id="navbar">
 
-                <!--
-                <div class="navbar-header">
-                          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                              <span class="icon-bar"></span>
-                              <span class="icon-bar"></span>
-                              <span class="icon-bar"></span>
-                          </button>
-                </div>
-                -->
-                <div class="col s10 offset-s1 offset-m1 m3 home_bloc_btn">
+                <div class="col s10 offset-s1 m4 home_bloc_btn">
                     <a href=""><img src="" alt=""><img src="{{ asset('/img/logo_perso-white.png') }}" alt="" ></a>
                     <a href="{{ path('index') }}"><img src="{{ asset('/img/home-black.png') }}" alt="home" ></a>
                     <a class="disable" href="{{ path('profile') }}"><img src="{{ asset('/img/profile-black.png')}}" alt="profil"></a>
@@ -51,7 +42,7 @@
                     <a class="disable" href="{{ path('settings') }}"><img src="{{ asset('/img/settings-black.png')}}" alt="settings"></a>
                     <a href="{{ path('logbook') }}"><img src="{{ asset('/img/logbook-black.png')}}" alt="logbook"></a>
                 </div>
-                <div class="col s10 offset-s1 offset-m1 m3 home_bloc_btn">
+                <div class="col s10 offset-s1 offset-m1 m4 home_bloc_btn">
                     <a href="https://github.com/{{ github }}" target="_blank"><img src="{{ asset('/img/github-black.png') }}" alt="github"></a>
                     <a  href="https://twitter.com/{{ twitter }}" target="_blank"><img src="{{ asset('/img/twitter-black.png')}}" alt="twitter"></a>
                     <a href="https://fr.linkedin.com/in/{{ linkedin }}" target="_blank"><img src="{{ asset('/img/linkedin-black.png')}}" alt="linkedin"></a>
