--- a/app/Resources/views/Main/logbook.html.twig
+++ b/app/Resources/views/Main/logbook.html.twig
@@ -3,51 +3,67 @@
 {% block title %}Journal de Dev - Logbook | {{ site_name }}{% endblock %}
 
 {% block body %}
-    <div class="">
-        <h1>Journal de développement - Logbook</h1>
-        <h2><small>Ici vous trouverez des postes courts sur les avancées et difficultés rencontrées en développant mon site perso.</small></h2>
 
-        <div class="row logbook" id="logbook_obj">
-            <div class="col offset-s1 s10 offset-m2 m8 offset-l3 l6">
-                <h3>Objectifs</h3>
-                <h4><small>Axes de développement sur lesquels je souhaite travailler pour mon site :</small></h4>
-                <ul>
-                    <li>Développement de toutes les sections du site</li>
-                    <li>Tenue du logbook de développement</li>
-                    <li>Création d'une partie blog avec backoffice permettant la mise en ligne simple de postes.</li>
-                </ul>
-                <br>
+    <div class="row">
+        <div class="col s12 offset-m2 m8 offset-l3 l6">
 
-                <h4><small>Optionnel :</small></h4>
-                <ul>
-                    <li>Commencer à créer une chatbot</li>
-                    <li>Intégrer API Github / créer script pour intégrer automatiquement mes de commit dans le logbook. </li>
-                </ul>
+            <div class="logbook_title">
+                <h1>Journal de développement - Logbook</h1>
+                <p>Ici vous trouverez des postes courts sur les avancées et difficultés rencontrées en développant mon site perso.</p>
             </div>
-        </div>
+            <ul class="collapsible logbook" data-collapsible="accordion">
+                <li class="logbook_article">
+                    <div class="collapsible-header active">
+                        <h2>Objectifs</h2>
+                    </div>
+                    <div class="collapsible-body">
+                        <h3><small>Axes de développement sur lesquels je souhaite travailler pour mon site :</small></h3>
+                        <ul>
+                            <li>Développement de toutes les sections du site</li>
+                            <li>Tenue du logbook de développement</li>
+                            <li>Création d'une partie blog avec backoffice permettant la mise en ligne simple de postes.</li>
+                        </ul>
+                        <br>
 
-        <div class="bl_sp_xs"></div>
+                        <h3><small>Optionnel :</small></h3>
+                        <ul>
+                            <li>Commencer à créer une chatbot</li>
+                            <li>Intégrer API Github / créer script pour intégrer automatiquement mes de commit dans le logbook. </li>
+                        </ul>
+                        <div class="bl_sp_xs"></div>
+                    </div>
+                </li>
 
-        <div class="row logbook section" id="logbook_articles">
 
-            <div class="col offset-s1 s10 offset-m2 m8 offset-l3 l6">
-                <h3>Journal</h3>
-            </div>
-            {% for logbook in logbooks %}
-            {% if logbook.title != "Objectifs" %}
-                <div class="col offset-s2 s8 offset-m2 m8 offset-l3 l6 hoverable">
-                    <h4><small>{{ logbook.title }}</small></h4>
-                    {%  if logbook.other %}
-                        <p>{{ logbook.other }}</p>
-                    {%  endif %}
-                    {%  if logbook.img %}
-                        <img src="{{ logbook.img }}"/>
+                <!--   <div class="row logbook section" id="logbook_articles">
+
+
+                -->
+                <li>
+                    <div class="collapsible-header logbook_article">
+                        <h2>Journal</h2>
+                    </div>
+
+                </li>
+                {% for logbook in logbooks %}
+                    {% if logbook.title != "Objectifs" %}
+                        <li>
+                            <div class="collapsible-header">
+                                <h3><small>{{ logbook.title }}</small></h3>
+                            </div>
+                            <div class="collapsible-body">
+                                {%  if logbook.other %}
+                                    <p>{{ logbook.other }}</p>
+                                {%  endif %}
+                                {%  if logbook.img %}
+                                    <img src="{{ logbook.img }}"/>
+                                {% endif %}
+                                <p>{{ logbook.content | raw }}</p>
+                            </div>
+                        </li>
                     {% endif %}
-                    <p>{{ logbook.content | raw }}</p>
-                    <div class="divider"></div>
-                </div>
-            {% endif %}
-            {% endfor %}
+                {% endfor %}
+            </ul>
         </div>
     </div>
 {% endblock %}
