--- a/web/css/main.css
+++ b/web/css/main.css
@@ -107,8 +107,13 @@ img {
 .home_bloc_tile {
     height: 25vh;
     margin-top: 5vh;
-    border-bottom: 1px solid #006600;
+ /**   border-bottom: 1px solid #006600;
     border-left: 1px solid #006600;
+    box-shadow: 2px 2px 0 0 #009900; **/
+    width: 300px;
+    background-color: #FFFFFF;
+    position: relative;
+    box-shadow: 0px 20px 75px -20px #5CE522;
 }
 
 .home_bloc_tile p {
@@ -119,7 +124,7 @@ img {
 }
 
 #socialnet_tile img {
-    height: 36px;
-    width: 36px;
-    margin:auto;
+    height: 32px;
+    width: 32px;
+    margin:0 8px 0 8px;
 }
